tidy up formatting